fixed forwarding auth header autho

--- a/src/app/components/circle/circle.component.html
+++ b/src/app/components/circle/circle.component.html
@@ -1,12 +1,12 @@
 <p>
   <ngb-alert type="primary" [dismissible]="false">
-    Favourite profiles can be quickly accessed from here.
-    They can be added here by selecting 'Add to Circle' from their profile.
+    You can setup your own Circle, so the favorite profiles can be quickly accessed from here.
+    <h6>Just select 'Add to Circle' from any profile.</h6>
   </ngb-alert>
 </p>
 
 <div *ngIf="circleUsersInfo === null">
-No members got added in your Circle.
+Your Circle is empty.
 </div>
 
 <div *ngIf="circleUsersInfo != null" class="container">
