--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -54,7 +54,8 @@
     <div class="col-sm-6">
       <div class="banner-caption">
         <div class="col-md-12 col-sm-12 banner-text">
-          <h3>GoPolitix is a place to know about Legislative representatives, Bills, Communities and many that matters to you.</h3>
+         <!-- <h3>GoPolitix is a place to Explore, Connect and Engage with Legislative representatives, Bills, Communities and many that matters to you.</h3>-->
+          <h5>GoPolitix is a place to Explore, Connect, Engage with Political, Government and many Local Communities that matters to you.</h5>
         </div>
       </div>
     </div>
@@ -100,7 +101,7 @@
     </div>
 
     <div class="col-md-8 small-padd">
-      <div class="form-group">
+      <div class="form-group"s>
         <div class="input-with-icon">
           <input type="text" class="form-control" placeholder="Email Address">
           <i class="ti-envelope"></i>
@@ -139,17 +140,33 @@
                   <div class="category-desc">
                       <div class="category-icon"><i class="fa fa-link" aria-hidden="true"></i><i class="fa fa-link abs-icon" aria-hidden="true"></i></div>
                       <div class="category-detail category-desc-text">
-                          <p>Explore, Connect and Engage with your Communities, Townships, County, State and Federal legislative representatives, Bills, Political Parties, Friends, Places and more.</p>
+<!--
+                        <p>Explore, Connect and Engage with your Community, Township, County, State and Federal legislative representatives, Bills, Political Parties, Friends, Places and more.</p>
+    -->
+                     
+                      <h6>Get informed about your Legislative and Government representatives.</h6>
+                     <!-- Know about their Roles, Committees, Bills, Offices.-->
+                    
                       </div>
                   </div>
               </div>
           </div>
+          <div class="col-mds-6 col-sm-6">
+            <div class="category-box" data-aos="fade-up">
+                <div class="category-desc">
+                    <div class="category-icon"><i class="fa fa-file" aria-hidden="true"></i><i class="fa fa-file abs-icon" aria-hidden="true"></i></div>
+                    <div class="category-detail category-desc-text">
+                        <h6>Talk about government Bills that are relevant to you.</h6>
+                    </div>
+                </div>
+            </div>
+        </div>
           <div class="col-md-6 col-sm-6">
               <div class="category-box" data-aos="fade-up">
                   <div class="category-desc">
                       <div class="category-icon"><i class="fa fa-comments-o" aria-hidden="true"></i><i class="fa fa-comments-o abs-icon" aria-hidden="true"></i></div>
                       <div class="category-detail category-desc-text">
-                          <p>Post, Comment and get informed between your Connections.</p>
+                          <h6>Post, Comment and Get informed on your interest.</h6>
                       </div>
                   </div>
               </div>
@@ -159,7 +176,7 @@
                   <div class="category-desc">
                       <div class="category-icon"><i class="fa fa-newspaper-o" aria-hidden="true"></i><i class="fa fa-newspaper-o abs-icon" aria-hidden="true"></i></div>
                       <div class="category-detail category-desc-text">
-                          <p>Create Page of your interest, Invite people to engage, and Popularize your interest. You can also keep your private closed groups.</p>
+                          <h6>Create pages, Invite people, Reach the world.</h6>
                       </div>
                   </div>
               </div>
@@ -169,7 +186,7 @@
                   <div class="category-desc">
                       <div class="category-icon"><i class="fa fa-users" aria-hidden="true"></i><i class="fa fa-users abs-icon" aria-hidden="true"></i></div>
                       <div class="category-detail category-desc-text">
-                          <p>It’s a place to better understand your environment.</p>
+                          <h6>Add your favorites to the Circle.</h6>
                       </div>
                   </div>
               </div>
