--- a/src/app/components/connection/connectionrequest/connectionrequest.component.html
+++ b/src/app/components/connection/connectionrequest/connectionrequest.component.html
@@ -15,7 +15,7 @@
               </div>
               <div class="userDescription">
                 <h5>{{user.full_name}}</h5>
-                <p>@{{user.username}}</p>
+                <p>{{user.username}}</p>
                
                 <div class="card-body">
                   <p>{{followersCount}} Followers</p>
