--- a/src/app/components/user/usercard2/usercard2.component.html
+++ b/src/app/components/user/usercard2/usercard2.component.html
@@ -8,11 +8,13 @@
                   <img src="https://preview.ibb.co/miQjb7/photography4.jpg">
               </div>
               <div class="userImg">
-                  <img [src]="user.photoUrl">
+                  <img [src]="profileSmImage"
+                  alt="Place image title" width="40" height="40"
+                  *ngIf="!isImageLoading">
               </div>
               <div class="userDescription">
                   <h5>{{user.full_name}}</h5>
-                  <p>@{{user.username}}</p>
+                  <p>{{user.username}}</p>
                  
                   
                    <div class="followrs">
